--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+attrs==25.3.0
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.1.31
@@ -9,6 +13,7 @@ colorama==0.4.6
 distro==1.9.0
 Flask==3.1.0
 flask-cors==5.0.1
+frozenlist==1.5.0
 google-api-core==2.24.2
 google-api-python-client==2.165.0
 google-auth==2.38.0
@@ -24,9 +29,11 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.9.0
 MarkupSafe==3.0.2
+multidict==6.2.0
 oauth2client==4.1.3
 oauthlib==3.2.2
-openai==1.67.0
+openai==0.28.0
+propcache==0.3.0
 proto-plus==1.26.1
 protobuf==6.30.1
 pyasn1==0.6.1
@@ -45,3 +52,4 @@ typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
 Werkzeug==3.1.3
+yarl==1.18.3
