--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,64 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.14
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
 aiosignal==1.3.2
 annotated-types==0.7.0
-anyio==4.9.0
-attrs==25.3.0
+anyio==4.8.0
+attrs==24.3.0
 blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.1.31
+cachetools==5.5.1
+certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 distro==1.9.0
 Flask==3.1.0
-flask-cors==5.0.1
+Flask-Cors==5.0.0
+Flask-Mail==0.10.0
+Flask-SQLAlchemy==3.1.1
 frozenlist==1.5.0
-google-api-core==2.24.2
-google-api-python-client==2.165.0
+git-filter-repo==2.47.0
+google-api-core==2.24.1
+google-api-python-client==2.160.0
 google-auth==2.38.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
-googleapis-common-protos==1.69.2
+googleapis-common-protos==1.66.0
+greenlet==3.1.1
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httplib2==0.22.0
 httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
-Jinja2==3.1.6
-jiter==0.9.0
+Jinja2==3.1.5
+jiter==0.8.2
+joblib==1.4.2
 MarkupSafe==3.0.2
-multidict==6.2.0
-oauth2client==4.1.3
+multidict==6.1.0
+nltk==3.9.1
+numpy==2.2.3
 oauthlib==3.2.2
 openai==0.28.0
-propcache==0.3.0
-proto-plus==1.26.1
-protobuf==6.30.1
+packaging==24.2
+propcache==0.2.1
+proto-plus==1.26.0
+protobuf==5.29.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
-pydantic==2.10.6
+pydantic==2.10.5
 pydantic_core==2.27.2
 pyparsing==3.2.1
 python-dotenv==1.0.1
+regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
 rsa==4.9
-six==1.17.0
+scikit-learn==1.6.1
+scipy==1.15.2
 sniffio==1.3.1
+SQLAlchemy==2.0.38
+threadpoolctl==3.5.0
 tqdm==4.67.1
 typing_extensions==4.12.2
 uritemplate==4.1.1
